--- a/SeminarThesis/thesis.tex
+++ b/SeminarThesis/thesis.tex
@@ -43,15 +43,20 @@
 \addcontentsline{toc}{chapter}{Abstract}
 \begin{otherlanguage*}{american}
 
-This paper captures an overview of ideas, techniques, results and future possibilities of clustering in vehicular networks.
-Clustering is a technique to group nodes based on a selected criteria
-which defines certain level of similarities among the nodes.
-Grouping the nodes together in such a way helps define or design certain set of functionalities which can only be applicable to the
-groups and can be applied to smaller sub-set.
-In a vehicular networking environment clustering can be used to group vehicles to reduce the network traffic and achieve better network throughput.
+This thesis captures an overview of ideas, techniques, results and future possibilities of clustering in vehicular networks.
+Clustering is a technique to group nodes based on a selected criteria which defines certain level of similarities among the nodes.
+Grouping the nodes together in such a way helps define or design a set of functionalities applicable only to the
+group and can be applied to smaller sub-set. In a vehicular networking environment clustering presents possibilities
+to group vehicles based on a parametr of interest and help to reduce the network traffic, achieve better network throughput,
+effective information dissemination.
 
-Clustering in vehicular network is 
-
+The thesis presents a set of parameter and respective algorithm based on them for vehicular networks as a comparitive study.
+First chapter presents the motivation behind the clustering and outlines the basic set of problems which is presented by vehicular
+Networks which the algorithm try to address. The second chapter describes the algorithms grouping them based on the main parameters
+used for clustering. The third chapter captures a comparative study, highlighting benefits and drawbacks of different approaches based
+on simulation results. Finally the thesis captures some ideas which will give an overview of the future research work on the topic.
+ 
+ 
 \end{otherlanguage*}
 
 
